--- a/frontend/src/css/style.css
+++ b/frontend/src/css/style.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.delete-card {
+    cursor: pointer;
+}
+
+.card {
+    display: flex;
+    justify-content: space-between;
+}
